# cook-dev

./: .gitignore  README.md  actions.html  environment.yml  index.html  pyproject.toml  taxonomy.html
cooksim/: __init__.py
cooksim/agents/: __init__.py  heuristic.py  highlevel.py  observe.py
cooksim/core/: __init__.py  config.py  enums.py  game.py  items.py  layout.py  orders.py  player.py  recipes.py  stations.py
cooksim/envs/: __init__.py  gym_env.py  observation.py  pettingzoo_env.py
cooksim/layouts/: __init__.py  builtin.py
cooksim/server/: __init__.py  app.py  session.py
docs/: AGENT_HANDOFF.md  highlevel_actions.md
examples/: greedy_demo.py  procedural_and_custom.py  random_rollout.py
feedback/round_1/: cheeseburger.json  deluxe_burger.json  ep_bistro.json  ep_diner.json  ep_grand.json  fish_and_chips.json  fried_rice.json  greek_salad.json  loaded_fries.json  onion_soup.json  page@c73626427951d9842c96a83c31266371.json  pizza.json  summary.json  sushi.json  veggie_bake.json
feedback/round_2/: cheeseburger.json  deluxe_burger.json  ep_bistro.json  ep_diner.json  ep_grand.json  fish_and_chips.json  fried_rice.json  greek_salad.json  loaded_fries.json  onion_soup.json  page@c73626427951d9842c96a83c31266371.json  (+4 more)
site/: actions.html  index.html  taxonomy.html
tests/: test_core.py  test_envs.py  test_highlevel.py
tools/: check_page.py  encode_clips.sh  gemini_cook.py  gemini_feedback.py  gemini_live_agent.py  gemini_stream_agent.py  gemini_stream_rgb.py  gemini_stream_sw.py  record_clips.py
web/: editor.html  headless_render.html  index.html
(+51 files in other folders)
